--- a/index.html
+++ b/index.html
@@ -7,12 +7,23 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
     <title>默认样式</title>
     <link rel="stylesheet" href="https://a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css" />
+    <script src="http://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="qrcode.js"></script>
     <style>
         html,
         body,
         #container {
             height: 100%;
             width: 100%;
+        }
+
+        canvas {
+            background: white;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            z-index: 161;
         }
     </style>
 </head>
@@ -22,6 +33,7 @@
     <div id="tip" class="info" style="min-width:auto;cursor:pointer;">
         <img src="https://webapi.amap.com/theme/v1.3/markers/n/mark_bs.png" style="width: 8px; height: 13px;"> 施工位置
     </div>
+    <!-- <div id="erm" class="info" style="width:30%;"></div> -->
     <script type="text/javascript"
         src="https://webapi.amap.com/maps?v=1.4.13&key=41f7d76bf0acc9e33fb3d0e054b5b585"></script>
     <script type="text/javascript">
@@ -32,8 +44,8 @@
             resizeEnable: true
         });
 
-        document.querySelector("#tip").onclick = function() {
-            if(marker){
+        document.querySelector("#tip").onclick = function () {
+            if (marker) {
                 map.setCenter(contextMenuPositon);
             }
         }
@@ -51,6 +63,15 @@
                     position: contextMenuPositon //基点位置
                 });
             }
+
+            $(function () {
+                $("#container").qrcode({
+                    text: "http:////uri.amap.com/marker?position="+contextMenuPositon,
+                    width: 128,
+                    height: 128,
+                });
+            });
+
         }, 2);
 
         contextMenu.addItem("删除标记", function (e) {
@@ -65,6 +86,15 @@
             contextMenu.open(map, e.lnglat);
             contextMenuPositon = e.lnglat;
         });
+    </script>
+    <script type="text/javascript">
+        $(function () {
+            $("#erm").qrcode({
+                text: "http://www.baidu.com",
+                width: 128,
+                height: 128,
+            });
+        });	
     </script>
 </body>
 
