--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         canvas {
             background: white;
             position: fixed;
-            bottom: 0;
+            top: 0;
             left: 0;
             z-index: 161;
         }
