--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css" />
     <script src="http://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
-    <!-- <script type="text/javascript" src="https://sfhuictk.github.io/exceladdin/qrcode.js"></script> -->
+    <script type="text/javascript" src="https://sfhuictk.github.io/exceladdin/qrcode.js"></script>
     <style>
         html,
         body,
@@ -18,7 +18,7 @@
             width: 100%;
         }
 
-        canvas {
+        #qrcode {
             background: white;
             position: fixed;
             bottom: 0;
@@ -33,7 +33,8 @@
     <div id="tip" class="info" style="min-width:auto;cursor:pointer;">
         <img src="https://webapi.amap.com/theme/v1.3/markers/n/mark_bs.png" style="width: 8px; height: 13px;"> 施工位置
     </div>
-    <script type="text/javascript">
+    <div id="qrcode"></div>
+    <!-- <script type="text/javascript">
         (function (r) {
             r.fn.qrcode = function (h) {
                 var s;
@@ -514,7 +515,7 @@
                 })
             }
         })(jQuery);
-    </script>
+    </script> -->
     <script type="text/javascript"
         src="https://webapi.amap.com/maps?v=1.4.13&key=41f7d76bf0acc9e33fb3d0e054b5b585"></script>
     <script type="text/javascript">
@@ -546,7 +547,8 @@
             }
 
             $(function () {
-                $("#container").qrcode({
+                $("#qrcode canvas").remove();
+                $("#qrcode").qrcode({
                     text: "http:////uri.amap.com/marker?position=" + contextMenuPositon,
                     width: 128,
                     height: 128,
@@ -567,15 +569,6 @@
             contextMenu.open(map, e.lnglat);
             contextMenuPositon = e.lnglat;
         });
-    </script>
-    <script type="text/javascript">
-        $(function () {
-            $("#erm").qrcode({
-                text: "http://www.baidu.com",
-                width: 128,
-                height: 128,
-            });
-        });	
     </script>
 </body>
 
