--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             $(function () {
                 $("#qrcode canvas").remove();
                 $("#qrcode").qrcode({
-                    text: "http:////uri.amap.com/marker?position=" + contextMenuPositon,
+                    text: "http://uri.amap.com/marker?position=" + contextMenuPositon,
                     width: 128,
                     height: 128,
                 });
