--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         }, 0);
 
         //右键显示全国范围
-        contextMenu.addItem("放到最大", function (e) {
+        contextMenu.addItem("放到最大", function () {
             map.setZoom(18);
         }, 1);
     
