--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </body>
 <script type="text/javascript"
         src="https://webapi.amap.com/maps?v=1.4.13&key=41f7d76bf0acc9e33fb3d0e054b5b585"></script>
-    <script type="text/javascript" src="app.js"></script>
+    //<script type="text/javascript" src="app.js"></script>
         var marker;
         var map = new AMap.Map("container", {
             center: [100.9809171101837, 22.785927021982616],
