--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
     </div>
     <div id="qrcode"></div>
 </body>
-<script type="text/javascript"
-        src="https://webapi.amap.com/maps?v=1.4.13&key=41f7d76bf0acc9e33fb3d0e054b5b585"></script>    
+    <script type="text/javascript"
+        src="https://webapi.amap.com/maps?v=1.4.13&key=41f7d76bf0acc9e33fb3d0e054b5b585"></script>
+    <script type="text/javascript">
         var marker;
         var map = new AMap.Map("container", {
             center: [100.9809171101837, 22.785927021982616],
@@ -94,4 +95,5 @@
             contextMenu.open(map, e.lnglat);
             contextMenuPositon = e.lnglat;
         });
+    </script>
 </html>
