--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
     <div id="qrcode"></div>
 </body>
     <script type="text/javascript"
-        src="https://webapi.amap.com/maps?v=1.4.13&key=41f7d76bf0acc9e33fb3d0e054b5b585"></script>
+        src="https://webapi.amap.com/maps?v=1.4.13&key=41f7d76bf0acc9e33fb3d0e054b5b585&plugin=AMap.PolygonEditor"></script>
     <script type="text/javascript" src="app.js"></script>
 </html>
